--- a/package.json
+++ b/package.json
@@ -30,11 +30,15 @@
     ]
   },
   "licenses": [
-    { "type": "MIT", "url": "http://www.opensource.org/licenses/mit-license.php" }
+    {
+      "type": "MIT",
+      "url": "http://www.opensource.org/licenses/mit-license.php"
+    }
   ],
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-cli": "~0.1.0",
-    "closure-compiler": "~0.2.1"
+    "grunt": "1.0.3",
+    "grunt-cli": "1.3.1",
+    "closure-compiler": "0.2.12",
+    "typescript": "3.0.3"
   }
 }
