--- a/package.json
+++ b/package.json
@@ -38,8 +38,9 @@
   "devDependencies": {
     "grunt": "1.0.3",
     "grunt-cli": "1.3.1",
-    "grunt-contrib-uglify": "4.0.0",
+    "grunt-contrib-uglify-es": "3.3.0",
     "closure-compiler": "0.2.12",
+    "jasmine": "3.2.0",
     "typescript": "3.0.3"
   }
 }
